--- a/src/pages/add/index.scss
+++ b/src/pages/add/index.scss
@@ -24,6 +24,15 @@
     //   border: 1px solid #07c160;
     // }
   }
+  .add_order_width {
+    .at-input__title {
+      width: 193px;
+    }
+  }
+  .add_order_list_space_height{
+    width: 90vw;
+    height: 30px;
+  }
   .add_submit {
     color: #fff;
     border: 1px solid #6190e8;
@@ -68,7 +77,7 @@
       justify-content: space-between;
       width: 90vw;
       margin: 0 auto;
-      margin-top: 32px;
+      margin-top: 25px;
       margin-bottom: 20px;
       .add_order_list_button_back {
         color: #fff;
