--- a/src/pages/mine/index.scss
+++ b/src/pages/mine/index.scss
@@ -26,9 +26,19 @@
     width: 85vw;
     margin: 0 auto;
     margin-top: 32px;
-    background: #6190e8;
-    opacity: 0.4;
+    background: rgba(97, 144, 232, 0.4);
+    // opacity: 0.4;
     border-radius: 10px;
     padding: 10px;
+    color: #88889c;
+    .mine_item_pics_con{
+        display: flex;
+        flex-wrap: wrap;
+        .mine_item_pics {
+            width: 25vw;
+            border-radius: 10px;
+            margin: 3vw 2vw 0vw 0;
+        }
+    }
   }
 }
